Fix responsive layout bug

--- a/static/less/bootstrap-custom.less
+++ b/static/less/bootstrap-custom.less
@@ -88,6 +88,8 @@ div[class="tooltip-inner"] {
         form {
             position: relative;
             width: 100%;
+            margin-top: 0 !important;
+            margin-bottom: 0 !important;
         }
 
         .twitter-typeahead {
@@ -100,4 +102,9 @@ div[class="tooltip-inner"] {
             }
         }
     }
+
+    #container {
+        top: 125px !important;
+    }
+
 }
