--- a/static/less/layout.less
+++ b/static/less/layout.less
@@ -84,18 +84,13 @@ body {
 
 #container {
     position: fixed;
-    top: 100px;
+    top: 98px;
     bottom: 30px;
     left: 20px;
     right: 20px;
     background: @container_color;
     .border-radius;
     margin: 0 auto;
-}
-@media (max-width: 600px) {
-    #container {
-        top: 140;
-    }
 }
 
 .logo {
